src/styles/blog.css
/* Style the post title */
h1{
    font-family: 'REM', sans-serif;
    font-weight: 900;
    color: var(--pop);
    line-height: 2.25rem;
    padding-block-end: 2.25rem;
    border-bottom:1px dotted var(--callout);
    margin-block-end:1.5rem;
  }


/* Style the inline headers */  

  h2, h3{
    font-family: 'REM', sans-serif;
    font-weight: 400;
    color: var(--callout);
    margin-bottom: .667rem;
   }

h2{
    margin-block-start:1rem;
    font-size: 1rem;
    font-weight: 700;
}

/* Breadcrumb css */
/* appears in markdownPostLayout */

.breadcrumb{
  font-family: 'MATE SC', serif;
  font-size: 1rem;
  margin-top: 1.5rem;
}


/* post header CSS */

.post-header{
  margin-top: 4.5rem;
}

/* high contrast color for body type */

p{
  text-wrap: pretty;
  color: var(--callout);
}

